--- a/05/css/style.css
+++ b/05/css/style.css
@@ -65,3 +65,35 @@ body {
 #video-play a {
   color: #fff;
 }
+
+/* About  */
+
+#page-header {
+  height: 200px;
+  background: url("../img/image1.jpg");
+  background-position: 0-360px;
+  background-attachment: fixed;
+  color: #fff;
+  border-bottom: 1px solid #eee;
+  padding-top: 50px;
+}
+
+.about-img {
+  margin-top: -50px;
+}
+
+/* services */
+
+#faq .card {
+  border: #444;
+}
+
+#faq a {
+  color: #fff;
+  text-decoration: none;
+}
+
+#faq .card-body,
+#faq .card-header {
+  background: #333;
+}
